# Cuda-Accelerated-Renderer-for-Scientific-Visualization

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
include/: camera.hpp  cuda_utils.hpp  device_structs.hpp  gui.hpp  renderer_kernel.hpp  transfer_function.hpp  volume.hpp  volume_renderer.hpp
src/: camera.cu  main.cu  renderer_kernerl.cu  scene.cu  transfer_function.cu  volume.cu  volume_renderer.cu
test/: CMakeLists.txt  helper.cpp  helper.hpp
